# easyDesktopApp

./: ARCHITECTURE_RULES.md  CLAUDE.md  QWEN.md  package-lock.json  package.json  unocss.config.ts  vite.config.ts
.claude/: settings.local.json
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  TODOLIST.md  log_config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  menu.rs  tray.rs
src-tauri/src/detection/: backend.rs  commands.rs  mock.rs  mod.rs
src-tauri/src/logging/: commands.rs  config.rs  logs.rs  mod.rs
src-tauri/src/serial/: commands.rs  config.rs  manager.rs  mod.rs
src/components/: AppMenu.vue  Header.vue  Layout.vue  LoginStatus.vue  Logo.vue  RunStatus.vue  TitleBar.vue
src/config/: productionLine.ts
src/modules/detecConfig/: Config.vue
src/modules/detection/: Detection.vue
src/modules/production/: Production.vue
src/modules/settings/: Settings.vue  SystemSettings.vue  UserManagement.vue
src/modules/settings/components/: DatabaseConfig.vue  HardwareConfig.vue  LoggingConfig.vue  StorageConfig.vue  SystemIntegration.vue
src/modules/settings/models/: LogConfig.ts  SerialConfig.ts
src/modules/settings/store/: logStore.ts  serialStore.ts
src/modules/statistics/: History.vue
src/router/: index.ts
src/views/: Alerts.vue  Config.vue  Detection.vue  History.vue  Home.vue  Statistics.vue
