[package]
name = "easydesktopapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easydesktopapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["logging", "single-instance", "serial"]
# 日志系统：fern 多目标写入 + tauri-plugin-log
logging = ["dep:tauri-plugin-log", "dep:fern", "dep:dirs"]
# 单实例保护
single-instance = ["dep:tauri-plugin-single-instance"]
# 系统托盘（需要 tauri 的 tray-icon / image-png feature）
tray = ["tauri/tray-icon", "tauri/image-png"]
# 外观检测功能（默认 mock 后端，可替换为真实模型）
detection = []
# 串口通信功能（serialport crate，按需启用）
serial = ["dep:serialport"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.29"
# optional: 仅 logging feature 启用时编译
tauri-plugin-log = { version = "2.8.0", optional = true }
fern = { version = "0.7.1", optional = true }
dirs = { version = "6.0.0", optional = true }
# optional: 仅 single-instance feature 启用时编译
tauri-plugin-single-instance = { version = "2", optional = true }
# optional: 仅 serial feature 启用时编译
serialport = { version = "4", optional = true }
